--- a/app.html
+++ b/app.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Git Demo</h1>
+    <h2>NewColors with brown heading</h2>
     <script src="index.js"></script>
 </body>
 </html>
